<resources>
    <string name="Privacy_protection">Privacy Protection</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="allow_to_collect_data">Allow collection of user usage data</string>
    <string name="app_name">Photo Recovery</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_got_it">Got It</string>
    <string name="btn_let_us_begin">"LET'S BEGIN"</string>
    <string name="btn_ok">OK</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_three_days_free_trial">3 Days Free Trail</string>
    <string name="btn_try_for_free">Try For Free</string>
    <string name="btn_try_for_free_now">Try For Free Now</string>
    <string name="btn_upgrade_to_pro_now">Upgrade to Pro Now</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="collect_data_description">Analyze usage data to improve products</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="congratulation">Congratulation</string>
    <string name="coninous_subscription_tip">The subscription gives you the unlimited access to the premium features. After purchase, you will automatically charged %1$s every year until you cancel it. You can cancel it in subscription on Google Play.</string>
    <string name="continue_to_agree_privacy_policy">By continuing you are agreeing to the [Privacy Policy]</string>
    <string name="copyright">\@2020 Photo Recovery Pro: Restore Deleted Photo</string>
    <string name="days">Days</string>
    <string name="deep_scan_recovery">Deep Scan Recovery</string>
    <string name="default_web_client_id"></string>
    <string name="detail_version">Version:%1$s</string>
    <string name="dialog_content_check_net_work">Please check your net work state and try again later</string>
    <string name="dialog_content_delete_files">Delete these files?</string>
    <string name="dialog_content_deleting">Deleting…</string>
    <string name="dialog_content_exit_confirm">Back to home?</string>
    <string name="dialog_content_gp_billing_unavailable">Please check your Google Play Payment Method and try again.</string>
    <string name="dialog_content_huawei_pay_unavailable">Please check your Huawei Payment Method and try again.</string>
    <string name="dialog_content_loading">Loading…</string>
    <string name="dialog_content_rate_your_experience">Please rate 5 stars &amp; let us know how we can improve our applications better. \n Thank you!</string>
    <string name="dialog_content_recovering">Recovering…</string>
    <string name="dialog_title_delete_files">Delete Files</string>
    <string name="dialog_title_gp_billing_unavailable">Google Play Billing unavailable</string>
    <string name="dialog_title_huawei_pay_unavailable">Huawei Pay Service unavailable</string>
    <string name="dialog_title_no_net_work">No Net Work</string>
    <string name="dialog_title_rate">Rate %1$s?</string>
    <string name="enjoy_photo_recovery">Enjoy %1$s now.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url"></string>
    <string name="free">Free</string>
    <string name="free_trail_continous_subscription_tip">"The subscription gives you the unlimited access to the premium features. If you don't cancel before the trial ends, you will automatically charged %1$s every year until you cancel it. You can cancel it in Subscription on Google Play."</string>
    <string name="free_trial_and_cancel_anytime">3-DAY free trial &amp; Cancel at anytime</string>
    <string name="gcm_defaultSenderId"></string>
    <string name="get_premium_free_today">GET PREMIUM FREE TODAY</string>
    <string name="get_premium_today">GET PREMIUM TODAY</string>
    <string name="get_rid_ads">Get rid of all third party advertisements</string>
    <string name="google_api_key"></string>
    <string name="google_app_id"></string>
    <string name="google_crash_reporting_api_key"></string>
    <string name="google_storage_bucket"></string>
    <string name="got_three_day_free_trial">You have upgraded to Premium. Enjoy!</string>
    <string name="guide_to_click">Click here to start deep scan</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hours">Hours</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_text_about">About</string>
    <string name="item_text_feedback">Feedback</string>
    <string name="item_text_get_premium">Get Premium</string>
    <string name="item_text_premium">Premium</string>
    <string name="item_text_privacy_policy">Privacy Policy</string>
    <string name="item_text_rate">Rate</string>
    <string name="item_text_share">Share</string>
    <string name="just_now">Just now</string>
    <string name="minutes">Minutes</string>
    <string name="msg_network_error">Your network is unavailable. Please check your network connection and try again.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="no_ads">No Ads</string>
    <string name="premium">Premium</string>
    <string name="recovery_and_no_ads">Deep Scan Recovery&amp;No Ads</string>
    <string name="restore_deleted_files">Restore files those were deleted before</string>
    <string name="seconds">Seconds</string>
    <string name="time_split">:</string>
    <string name="try_it_free">"You really don't want to try it for free?"</string>
    <string name="upgrade_to_view_all_items">To recovery the files, please upgrade to premium!</string>
</resources>