<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="175.0dip" android:layout_height="wrap_content" android:src="@drawable/img_premium" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/congratulation" />
    <TextView android:textSize="16.0sp" android:textColor="@color/text_main" android:id="@id/succeed_description_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/got_three_day_free_trial" />
    <Button android:textStyle="bold" android:id="@id/ok_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/btn_ok" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" style="@style/PrimaryButton" />
</LinearLayout>