<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/vi_to" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/background" android:paddingTop="36.0dip" android:paddingBottom="26.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="118.0dip" android:layout_height="118.0dip" app:srcCompat="@drawable/privacy_" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/Privacy_protection" />
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:textColor="@color/text_main" android:id="@id/privacy_text_view" android:background="?selectableItemBackground" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/item_text_privacy_policy" android:paddingStart="15.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:paddingStart="15.0dip" android:paddingEnd="15.0dip">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="@color/text_main" android:id="@id/collect_data_text_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/allow_to_collect_data" android:layout_weight="1.0" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/agree_switch_compat" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/collect_data_description" />
    </LinearLayout>
</LinearLayout>