<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/background" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="108.0dip" android:layout_height="80.0dip" app:srcCompat="@drawable/popup" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_it_free" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="12.0dip">
        <ImageView android:layout_width="28.0dip" android:layout_height="28.0dip" app:srcCompat="@drawable/ic_vector_premium" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_ads" android:layout_marginStart="5.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginStart="12.0dip">
        <ImageView android:layout_width="28.0dip" android:layout_height="28.0dip" app:srcCompat="@drawable/ic_vector_premium" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/deep_scan_recovery" android:layout_marginStart="5.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginStart="12.0dip">
        <ImageView android:layout_width="28.0dip" android:layout_height="28.0dip" app:srcCompat="@drawable/ic_vector_premium" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/free_trial_and_cancel_anytime" android:layout_marginStart="5.0dip" />
    </LinearLayout>
    <com.restorephoto.photorecovery.undeleted.photo.recovery.c.b.d android:id="@id/purchase_button" android:background="@drawable/btn_oval_primary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0sp" />
    <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/exit_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_exit" android:textAllCaps="true" style="@style/Widget.AppCompat.Button.Borderless" />
    <TextView android:textSize="9.0sp" android:textColor="@color/text_tip" android:id="@id/subscription_tip_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip" />
</LinearLayout>