<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/close_image_view" android:background="?selectableItemBackground" android:padding="5.0dip" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_margin="5.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_vector_close" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/get_premium_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/get_premium_free_today" android:layout_marginStart="15.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/close_image_view" />
    <TextView android:textColor="@color/text_main" android:id="@id/promote_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/recovery_and_no_ads" android:layout_marginStart="15.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/get_premium_text_view" />
    <com.restorephoto.photorecovery.undeleted.photo.recovery.c.b.n android:id="@id/count_down_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginStart="15.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/promote_text_view" />
    <ImageView android:id="@id/promote_image_view" android:layout_width="180.0dip" android:layout_height="0.0dip" android:layout_marginEnd="10.0dip" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/get_premium_text_view" app:srcCompat="@drawable/img_vector_woman" />
    <View android:id="@id/view_white" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/promote_image_view" app:layout_constraintVertical_bias="0.0" />
    <ImageView android:id="@id/premium_image_view" android:layout_width="55.0dip" android:layout_height="55.0dip" android:layout_marginTop="15.0dip" android:src="@drawable/img_premium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/view_white" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/premium_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/premium" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/premium_image_view" />
    <ImageView android:id="@id/scan_recovery_image_view" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginStart="34.0dip" app:layout_constraintBottom_toBottomOf="@id/restore_deleted_files_text_view" app:layout_constraintDimensionRatio="1:1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/deep_scan_recovery_text_view" app:srcCompat="@drawable/ic_vector_scan_recovery" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/deep_scan_recovery_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/deep_scan_recovery" android:layout_marginStart="10.0dip" app:layout_constraintStart_toEndOf="@id/scan_recovery_image_view" app:layout_constraintTop_toBottomOf="@id/premium_text_view" />
    <TextView android:textSize="14.0sp" android:textColor="@color/text_main" android:id="@id/restore_deleted_files_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/restore_deleted_files" app:layout_constraintStart_toStartOf="@id/deep_scan_recovery_text_view" app:layout_constraintTop_toBottomOf="@id/deep_scan_recovery_text_view" />
    <ImageView android:id="@id/no_ads_image_view" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/no_no" android:layout_marginStart="34.0dip" app:layout_constraintBottom_toBottomOf="@id/get_rid_ads_text_view" app:layout_constraintDimensionRatio="1:1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/no_ads_text_view" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/no_ads_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/no_ads" android:layout_marginStart="10.0dip" app:layout_constraintStart_toEndOf="@id/scan_recovery_image_view" app:layout_constraintTop_toBottomOf="@id/restore_deleted_files_text_view" />
    <TextView android:textSize="14.0sp" android:textColor="@color/text_main" android:id="@id/get_rid_ads_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/get_rid_ads" app:layout_constraintStart_toStartOf="@id/deep_scan_recovery_text_view" app:layout_constraintTop_toBottomOf="@id/no_ads_text_view" />
    <com.restorephoto.photorecovery.undeleted.photo.recovery.c.b.d android:enabled="false" android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/purchase_button" android:background="@drawable/btn_oval_orange" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/btn_try_for_free_now" android:textAllCaps="true" android:layout_marginStart="34.0dip" android:layout_marginEnd="34.0dip" app:layout_constraintBottom_toTopOf="@id/subscription_tip_text_view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="9.0sp" android:textColor="@color/text_tip" android:id="@id/subscription_tip_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:layout_marginStart="14.0dip" android:layout_marginEnd="14.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>