<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/count_down_background_view" android:background="@drawable/img_count_down_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="10.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hours" />
            <TextView android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/hours_text_view" android:background="@drawable/selector_count_down_text_bg" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="00" android:textAllCaps="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="10.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="@color/text_main" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/time_split" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="10.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minutes" />
            <TextView android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/minutes_text_view" android:background="@drawable/selector_count_down_text_bg" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="00" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="10.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="@color/text_main" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/time_split" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="10.0sp" android:textColor="@color/text_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seconds" />
            <TextView android:textStyle="bold" android:textColor="@color/text_main" android:id="@id/seconds_text_view" android:background="@drawable/selector_count_down_text_bg" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="00" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>